[package]
name = "UnityLib"
version = "0.1.0"
authors = ["Connor Ramsden <connor.ramsden@mymail.champlain.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.5.0"
prost-build = "0.5.0"
prost-derive = "0.5.0"
bytes = "0.4.12"
ffi-support = "0.3.5"

[lib]
name = "unity_ffi"
crate-type = ["dylib"]