[package]
name = "UnityLib"
version = "0.1.0"
authors = ["Connor Ramsden <connor.ramsden@mymail.champlain.edu>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2.0"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"

[lib]
name = "unity_ffi"
crate-type = ["dylib"]